Reworked Everything
This branch gives DeckBinders control over thier corresponding
DeckBinderPanels. 

Change was necessary to make adding and deleting/removing decks from
both the data structure and gui more clean.

At this point, branch[logan1] is showing equal results to branch[master]
and even includes functionality for buttons that add and remove decks.